--- a/may_blog/site/site_templates/createposts.html
+++ b/may_blog/site/site_templates/createposts.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Add a new blog post</h1>
-<form action="" method="POST">
+<form action="/" method="POST">
     {{ form.hidden_tag() }}
     <div class="form-group">
         <fieldset>
