--- a/may_blog/site/site_templates/index.html
+++ b/may_blog/site/site_templates/index.html
@@ -28,15 +28,17 @@
 {% if current_user.is_authenticated %}
     <h2>Hello there {{ current_user.email }}</h2>
     <div class="container">
-    {% for post in post %}
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">{{ post.tile }}</h5>
-              <h6 class="card-subtitle mb-2 text-muted">By: {{ post.username }}</h6>
-              <p class="card-text">{{ post.content }}</p>
-            </div>
-        </div>
-    {% endfor %}
+        {% for post in posts %}
+            {% if post.user_id == current_user.id %}
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                    <h5 class="card-title">{{ post.title }}</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: {{ current_user.username }}</h6>
+                    <p class="card-text">{{ post.content }}</p>
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
     </div>
 {% else %}
     <h2>Log in to see/make posts!</h2>
